--- a/OEBPS/xhtml/nav.xhtml
+++ b/OEBPS/xhtml/nav.xhtml
@@ -9,9 +9,43 @@
 </head>
 
 <body epub:type="frontmatter">
-  <li><a href="cover.xhtml">封面</a></li>
 
-  <nav epub:type="toc" id="toc" role="doc-toc"><h1>Table of Contents</h1></nav>
+  <nav epub:type="toc" id="toc" role="doc-toc"><h1>Table of Contents</h1>
+
+  <ol>
+    <li><a href="cover.xhtml">封面</a></li>
+
+    <li><a href="titlepage.xhtml">扉页</a></li>
+
+    <li><a href="colophon.xhtml">版权声明</a></li>
+
+    <li><a href="info.xhtml">制作信息</a></li>
+
+    <li><a href="fmatter.xhtml">简介</a></li>
+
+    <li><a href="illustration.xhtml">彩插</a></li>
+
+    <li><a href="character.xhtml">人物介绍</a></li>
+
+    <li><a href="toc.xhtml">目录</a></li>
+
+    <li><a href="chap-0.xhtml">序章</a></li>
+
+    <li><a href="chap-1.xhtml">第一话</a></li>
+
+    <li><a href="afterword.xhtml">后记</a></li>
+
+    <li><a href="author.xhtml">关于作者</a></li>
+
+    <li><a href="feedback.xhtml">联系方式</a></li>
+
+    <li><a href="back.xhtml">封底</a></li>
+
+    <li><a href="pamphlet.xhtml">特典小册子</a></li>
+
+    <li><a href="pam-1.xhtml">短篇</a></li>
+  </ol></nav>
+
   <nav epub:type="landmarks" id="landmarks" hidden=""><h1>Landmarks</h1>
 
   <ol>
